<!--
Copyright (C) 2020 Ceridwen Limited

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ceridwen.circulation</groupId>
    <artifactId>ceridwen-standard-interchange-protocol-library</artifactId>
    <version>2.11.0-updates-240329-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Java Implementation of the 3M SIP2 and NISO SIP3 Protocols for library circulation and self-check facilities.</description>
    <inceptionYear>2004</inceptionYear>
    <url>https://github.com/ceridwen-com/ceridwen-standard-interchange-protocol-library</url>
    <organization>
        <name>Ceridwen Limited</name>
        <url>http://www.ceridwen.com</url>
    </organization>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3.0</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Matthew J. Dovey</name>
            <email>development@ceridwen.com</email>
            <organization>Ceridwen Limited</organization>
            <organizationUrl>http://www.ceridwen.com</organizationUrl>
        </developer>
    </developers>    

    <issueManagement>
        <system>github</system>
        <url>https://github.com/ceridwen-com/ceridwen-standard-interchange-protocol-library/issues</url>
    </issueManagement>

    <scm>
        <url>https://github.com/ceridwen-com/ceridwen-standard-interchange-protocol-library</url>
        <connection>scm:git:https://github.com/ceridwen-com/ceridwen-standard-interchange-protocol-library.git</connection>
        <developerConnection>scm:git:https://gitlab.ceridwen.com/ceridwen-com/ceridwen-standard-interchange-protocol-library.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <prerequisites>
        <maven>3.9</maven>
    </prerequisites> 

    <properties>  
        <project.scm.id>git</project.scm.id>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>EEE, d MMMM, yyyy - HH:mm:ss zzz</maven.build.timestamp.format>
        <netbeans.hint.license>gpl30</netbeans.hint.license>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>com.ceridwen.util</groupId>
            <artifactId>ceridwen-util</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.10.0</version>
        </dependency> 
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.4</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>4.1.108.Final</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
            <version>4.1.108.Final</version>
        </dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>1.77</version>
		</dependency>
    </dependencies>
  
    <build>
        <resources>
            <resource>
                <directory></directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.md</include>
                </includes>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.3.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>9</source>
                        <target>9</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
                        <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
                        <test>Message#</test>
                    </configuration>          
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                            <manifestEntries>
                                <Built-By>${user.name}</Built-By>
                                <Build-Date>${maven.build.timestamp}</Build-Date>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                    <configuration>
                        <failOnError>false</failOnError>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <includePom>true</includePom>
                    </configuration> 
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>4.0.0-M13</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.2</version>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>9.0.10</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>                            
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>1.21.0</version>
                <configuration>
                    <installProject>false</installProject>
                    <verbose>false</verbose>
                    <gitFlowConfig>
                        <productionBranch>main</productionBranch>
                        <developmentBranch>develop</developmentBranch>
                        <featureBranchPrefix>feature/</featureBranchPrefix>
                        <releaseBranchPrefix>release/${project.artifactId}-</releaseBranchPrefix>
                        <hotfixBranchPrefix>hotfix/${project.artifactId}-</hotfixBranchPrefix>
                        <supportBranchPrefix>support//${project.artifactId}-</supportBranchPrefix>
                        <versionTagPrefix>version/${project.artifactId}-</versionTagPrefix>
                        <origin>origin</origin>
                    </gitFlowConfig>     
                    <versionDigitToIncrement>1</versionDigitToIncrement>  
                    <pushRemote>true</pushRemote>     
                    <allowSnapshots>false</allowSnapshots>
                    <keepBranch>true</keepBranch>
                    <noDeploy>true</noDeploy>
                    <suppressFastForward>true</suppressFastForward>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>
